moved the notification box backwards on the z axis as it was covering the carousel circles, preventing them from working

--- a/styles.css
+++ b/styles.css
@@ -781,7 +781,7 @@ footer {
 	color: white;
 	background-image: linear-gradient(rgb(0,0,0,0), black);;
 	width: 100%;
-	z-index: 5;
+	z-index: -1;
 	height: 45px;
 	font-size: 15px;
 	text-align: center;
@@ -884,6 +884,7 @@ footer {
 
 		.notification-box {
 			opacity: 1;
+			z-index: 5;
 		}
 }
 
